--- a/assets/main.css
+++ b/assets/main.css
@@ -2,9 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+
 @layer base {
+    html {
+        @apply scroll-smooth;
+    }
     body {
       @apply font-montserrat;
+      
     }
   }
 
