--- a/assets/main.css
+++ b/assets/main.css
@@ -3,7 +3,12 @@
 @tailwind utilities;
 
 
+:root{
+  touch-action: pan-x pan-y;
+  height: 100% 
+  }
 @layer base {
+
     html {
         @apply scroll-smooth;
     }
